--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,37 +1,21 @@
-# Stage 1: Build the Next.js app
-FROM node:20-alpine AS builder
+# Use a smaller base image for production
+FROM node:20-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Install dependencies (including dev dependencies needed for the build)
-COPY package.json package-lock.json* ./
+# Install dependencies
+COPY package.json package-lock.json ./
 RUN npm install --production
 
 # Copy the rest of the application
 COPY . .
 
-# Build the Next.js app
+# Build the application
 RUN npm run build
 
-# Stage 2: Production environment
-FROM node:20-alpine AS runner
-
-# Set environment variables for production
-ENV NODE_ENV=production
-ENV PORT=3000
-
-# Set working directory
-WORKDIR /app
-
-# Copy only the necessary files from the builder stage
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/node_modules ./node_modules
-
-# Expose the production port
+# Expose production port
 EXPOSE 3000
 
-# Run Next.js in production mode
+# Run the application
 CMD ["npm", "start"]
