--- a/compose.yml
+++ b/compose.yml
@@ -38,6 +38,7 @@ services:
     environment:
       - NODE_ENV=development
     volumes:
+      - ./frontend:/app
       - /app/node_modules
     command: npm run dev
 
