--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# ignore .env* files
+backend/.env*
+frontend/.env*
 
 # vercel
 .vercel
@@ -43,5 +44,4 @@ next-env.d.ts
 .idea
 .venv
 db.sqlite3
-.env
 staticfiles
