--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,4 +1,4 @@
-# Use a smaller base image for production
+# Pull official base image
 FROM python:3.10.0-alpine
 
 # Set work directory
@@ -9,14 +9,17 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 # Install dependencies
-RUN apk add --no-cache postgresql-dev build-base bash
+RUN apk add --no-cache postgresql-dev build-base \
+ && apk update \
+ && apk add bash
 
-# Copy only the requirements file first to leverage Docker caching
-COPY requirements.txt .
-RUN pip install --upgrade pip && pip install -r requirements.txt
-
-# Copy the rest of the application
 COPY . .
 
-# Command to run the application
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "lavocat.wsgi:application"]
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
+
+# Expose port
+EXPOSE 8000
+
+# Start Gunicorn
+CMD ["gunicorn", "lavocat.wsgi:application", "--bind", "0.0.0.0:8000"]
