--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     container_name: backend
@@ -15,7 +13,7 @@ services:
     ports:
       - 8000:8000
     env_file:
-      - backend/.env
+      - backend/.env.dev
 
   db:
     image: postgres:14
