--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Install dependencies
 COPY package.json package-lock.json ./
-RUN npm install --production
+RUN npm install
 
 # Copy the rest of the application
 COPY . .
@@ -14,7 +14,7 @@ COPY . .
 # Build the application
 RUN npm run build
 
-# Expose production port
+# Expose port
 EXPOSE 3000
 
 # Run the application
