fix serve staticfiles

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,8 @@ jobs:
             > backend/.env.prod
             
             # Append environment variables
+            echo "DEBUG=False" >> backend/.env.prod
+            echo "USE_S3=True" >> backend/.env.prod
             echo "SECRET_KEY=$SECRET_KEY" >> backend/.env.prod
             echo "ALLOWED_HOSTS=$ALLOWED_HOSTS" >> backend/.env.prod
             echo "DATABASE_URL=$DATABASE_URL" >> backend/.env.prod
@@ -69,6 +71,9 @@ jobs:
             
             # Build and deploy with Docker Compose
             docker-compose -f compose.prod.yml up -d --build
+            
+            # Collectic staticfiles
+            docker-compose -f compose.prod.yml run backend python manage.py collectstatic --noinput
             
             # Run database migrations
             docker-compose -f compose.prod.yml run backend python manage.py migrate
