--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,12 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.LIGHTSAIL_IP }} << EOF
             cd /home/ubuntu/veredict
+          
+            # Force reset and pull latest code
+            git fetch --all
+            git reset --hard origin/main
+            git clean -fd
+            git pull origin main --force
             
             # Set environment variables inside the SSH session
             export SECRET_KEY="${SECRET_KEY}"
@@ -70,7 +76,10 @@ jobs:
             echo "NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL" >> frontend/.env.production
             
             # Build and deploy with Docker Compose
-            docker-compose -f compose.prod.yml up -d --build
+            docker-compose -f compose.prod.yml down --volumes --remove-orphans
+            docker system prune -af
+            docker-compose -f compose.prod.yml build --no-cache
+            docker-compose -f compose.prod.yml up -d
             
             # Collectic staticfiles
             docker-compose -f compose.prod.yml run backend python manage.py collectstatic --noinput
