--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,8 +78,7 @@ jobs:
             # Build and deploy with Docker Compose
             docker-compose -f compose.prod.yml down --volumes --remove-orphans
             docker system prune -af
-            docker-compose -f compose.prod.yml build --no-cache
-            docker-compose -f compose.prod.yml up -d
+            docker-compose -f compose.prod.yml up -d --build
             
             # Collectic staticfiles
             docker-compose -f compose.prod.yml run backend python manage.py collectstatic --noinput
