--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -1,5 +1,6 @@
 services:
   backend:
+    container_name: backend
     image: backend:prod
     build:
       context: ./backend
@@ -10,6 +11,7 @@ services:
       - backend/.env.prod
 
   frontend:
+    container_name: frontend
     image: frontend:prod
     build:
       context: ./frontend
