--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services:
   backend:
     container_name: backend
-    image: backend
+    image: backend:dev
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
@@ -9,13 +9,14 @@ services:
       - db
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./:/app/backend/
+      - ./backend:/app
     ports:
       - 8000:8000
     env_file:
       - backend/.env.dev
 
   db:
+    container_name: db
     image: postgres:14
     restart: always
     environment:
@@ -28,6 +29,8 @@ services:
       - postgres_data:/var/lib/postgresql/data/
 
   frontend:
+    container_name: frontend
+    image: frontend:dev
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
