refactoring lavocat backend project name

--- a/backend/contrib/.env.dev
+++ b/backend/contrib/.env.dev
@@ -1,7 +1,7 @@
 SECRET_KEY='secret'
 DEBUG=True
 ALLOWED_HOSTS=localhost,0.0.0.0,127.0.0.1
-DATABASE_URL=postgres://postgres:password@db:5432/lavocat
+DATABASE_URL=postgres://postgres:password@db:5432/veredict
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_STORAGE_BUCKET_NAME=
