--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -17,12 +17,12 @@ jobs:
         image: postgres:14
         env:
           POSTGRES_USER: postgres
-          POSTGRES_DB: lavocat
+          POSTGRES_DB: veredict
           POSTGRES_PASSWORD: password
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U postgres -d lavocat"
+          --health-cmd "pg_isready -U postgres -d veredict"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
