--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -22,4 +22,4 @@ RUN pip install -r requirements.txt
 EXPOSE 8000
 
 # Start Gunicorn
-CMD ["gunicorn", "lavocat.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "veredict.wsgi:application", "--bind", "0.0.0.0:8000"]
