--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = lavocat.settings
+DJANGO_SETTINGS_MODULE = veredict.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -p no:warnings
