--- a/compose.yml
+++ b/compose.yml
@@ -21,7 +21,7 @@ services:
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_DB: lavocat
+      POSTGRES_DB: veredict
       POSTGRES_PASSWORD: password
     ports:
       - '5432:5432'
