--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile.dev
     depends_on:
       - db
+      - redis
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./backend:/app
@@ -43,6 +44,29 @@ services:
       - /app/node_modules
     command: npm run dev
 
+  redis:
+    container_name: redis
+    image: redis:7
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+
+  worker:
+    container_name: worker
+    image: backend:dev
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    depends_on:
+      - redis
+      - db
+    command: python manage.py run_worker
+    volumes:
+      - ./backend:/app
+    env_file:
+      - backend/.env.dev
 
 volumes:
   postgres_data:
+  redis_data:
