image processing added

--- a/backend/contrib/.env.dev
+++ b/backend/contrib/.env.dev
@@ -5,3 +5,5 @@ DATABASE_URL=postgres://postgres:password@db:5432/veredict
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_STORAGE_BUCKET_NAME=
+AWS_REGION=
+CELERY_BROKER_URL=redis://redis:6379/0
