--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ django_nose==1.4.7
 model_bakery==1.10.1
 django-cors-headers==3.7.0
 django_extensions==3.1.1
-boto3==1.17.39
+boto3==1.26.35
 django-storages==1.11.1
 pytest==7.1.3
 pytest-django==4.1.0
@@ -29,3 +29,7 @@ redis==5.2.1
 celery==5.4.0
 dj-database-url==0.5.0
 dj-static==0.0.6
+amazon-textract-textractor==1.8.5
+ruff==0.9.7
+pytest-vcr==1.0.2
+vcrpy==7.0.0
