--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -20,3 +20,31 @@ services:
       - 3000:3000
     environment:
       - NODE_ENV=production
+
+  redis:
+    container_name: redis
+    image: redis:7
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+
+  worker:
+    container_name: worker
+    image: backend:dev
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    restart: always
+    depends_on:
+      - redis
+      - db
+    command: python manage.py run_worker
+    volumes:
+      - ./backend:/app
+    env_file:
+      - backend/.env.dev
+
+volumes:
+  postgres_data:
+  redis_data:
