--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -37,11 +37,23 @@ jobs:
           sudo apt-get install -y docker-compose
 
       - name: Create `.env.test` file
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_STORAGE_BUCKET_NAME: ${{ secrets.AWS_STORAGE_BUCKET_NAME }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          CELERY_BROKER_URL: ${{ secrets.CELERY_BROKER_URL }}
         run: |
           > backend/.env.test
           echo "DEBUG=True" >> backend/.env.test
           echo "SECRET_KEY=secret" >> backend/.env.test
           echo "ALLOWED_HOSTS=*" >> backend/.env.test
+          echo "CELERY_BROKER_URL=CELERY_BROKER_URL" >> backend/.env.test
+          echo "USE_S3=True" >> backend/.env.test
+          echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID" >> backend/.env.test
+          echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY" >> backend/.env.test
+          echo "AWS_STORAGE_BUCKET_NAME=$AWS_STORAGE_BUCKET_NAME" >> backend/.env.test
+          echo "AWS_REGION=$AWS_REGION" >> backend/.env.test
 
       - name: Set up Docker Compose for Tests
         run: |
