improvements CI loggings and deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,9 +101,8 @@ jobs:
             docker-compose -f compose.prod.yml up -d
           
             echo "Running database migrations..."
-            docker-compose -f compose.prod.yml run backend python manage.py migrate
+            docker-compose -f compose.prod.yml exec backend python manage.py migrate
             
             echo "Collecting static files..."
-            docker-compose -f compose.prod.yml run backend python manage.py collectstatic --noinput
-          
+            docker-compose -f compose.prod.yml exec backend python manage.py collectstatic --noinput
           EOF
