adding sentry DSN env var

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           SECRET_KEY: ${{ secrets.BACKEND_SECRET_KEY }}
           DATABASE_URL: ${{ secrets.BACKEND_DATABASE_URL }}
           CELERY_BROKER_URL: ${{ secrets.BACKEND_CELERY_BROKER_URL }}
-          FRONTEND_API_URL: ${{ secrets.FRONTEND_API_URL }}
+          SENTRY_DSN: ${{ secrets.BACKEND_SENTRY_DSN }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -69,7 +69,7 @@ jobs:
             export ALLOWED_HOSTS="${ALLOWED_HOSTS}"
             export DATABASE_URL="${DATABASE_URL}"
             export CELERY_BROKER_URL="${CELERY_BROKER_URL}"
-            export FRONTEND_API_URL="${FRONTEND_API_URL}"
+            export SENTRY_DSN="${SENTRY_DSN}"
             export AWS_REGION="${AWS_REGION}"
             export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID}"
             export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}"
@@ -85,6 +85,7 @@ jobs:
             echo "ALLOWED_HOSTS=$ALLOWED_HOSTS" >> backend/.env.prod
             echo "DATABASE_URL=$DATABASE_URL" >> backend/.env.prod
             echo "CELERY_BROKER_URL=$CELERY_BROKER_URL" >> backend/.env.prod
+            echo "SENTRY_DSN=$SENTRY_DSN" >> backend/.env.prod
             echo "USE_S3=True" >> backend/.env.prod
             echo "AWS_REGION=$AWS_REGION" >> backend/.env.prod
             echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID" >> backend/.env.prod
