--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,5 +102,5 @@ jobs:
           
             echo "Running database migrations and collecting static files..."
             docker-compose -f compose.prod.yml run --rm backend python manage.py migrate && \
-            docker-compose -f compose.prod.yml run --rm backend python manage.py collectstatic --noinput
+            docker-compose -f compose.prod.yml run --rm backend python manage.py collectstatic --noinput --verbosity 2
           EOF
