add image hostname env var

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,7 @@ jobs:
             export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}"
             export AWS_STORAGE_BUCKET_NAME="${AWS_STORAGE_BUCKET_NAME}"
             export NEXT_PUBLIC_API_URL="${NEXT_PUBLIC_API_URL}"
+            export NEXT_IMAGE_HOSTNAME="${NEXT_IMAGE_HOSTNAME}"
           
             echo "Writing backend environment file..."
             > backend/.env.prod
@@ -94,6 +95,7 @@ jobs:
             echo "Writing frontend environment file..."
             > frontend/.env.production
             echo "NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL" >> frontend/.env.production
+            echo "NEXT_IMAGE_HOSTNAME=$NEXT_IMAGE_HOSTNAME" >> frontend/.env.production
             
             echo "Restarting services with Docker Compose..."
             docker-compose -f compose.prod.yml down --remove-orphans
