--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_STORAGE_BUCKET_NAME: ${{ secrets.AWS_STORAGE_BUCKET_NAME }}
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+          NEXT_PUBLIC_IMAGE_HOSTNAME: ${{ secrets.NEXT_PUBLIC_IMAGE_HOSTNAME }}
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.LIGHTSAIL_IP }} << EOF
             set -x
@@ -75,7 +76,7 @@ jobs:
             export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}"
             export AWS_STORAGE_BUCKET_NAME="${AWS_STORAGE_BUCKET_NAME}"
             export NEXT_PUBLIC_API_URL="${NEXT_PUBLIC_API_URL}"
-            export NEXT_IMAGE_HOSTNAME="${NEXT_IMAGE_HOSTNAME}"
+            export NEXT_PUBLIC_IMAGE_HOSTNAME="${NEXT_PUBLIC_IMAGE_HOSTNAME}"
           
             echo "Writing backend environment file..."
             > backend/.env.prod
@@ -95,7 +96,7 @@ jobs:
             echo "Writing frontend environment file..."
             > frontend/.env.production
             echo "NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL" >> frontend/.env.production
-            echo "NEXT_IMAGE_HOSTNAME=$NEXT_IMAGE_HOSTNAME" >> frontend/.env.production
+            echo "NEXT_PUBLIC_IMAGE_HOSTNAME=$NEXT_PUBLIC_IMAGE_HOSTNAME" >> frontend/.env.production
             
             echo "Restarting services with Docker Compose..."
             docker-compose -f compose.prod.yml down --remove-orphans
