--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
     "react-tooltip": "^5.28.0",
     "swr": "^2.3.0"
