--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
     "react-tooltip": "^5.28.0",
-    "swr": "^2.3.0"
+    "swr": "^2.3.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
