--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,13 @@
   "name": "veredict",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "format": "prettier --write .",
-    "lint": "eslint . --ignore-pattern tailwind.config.ts --max-warnings=0"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
