add reverse proxy

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -10,6 +10,16 @@ services:
     env_file:
       - backend/.env.prod
 
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/conf:/etc/nginx/conf.d
+    depends_on:
+      - frontend
+
   frontend:
     container_name: frontend
     image: frontend:prod
