fix nginx config

--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name veredito.net veredito.adv.br
+    server_name veredito.net veredito.adv.br;
 
     # Route / → frontend on port 3000
     location / {
